  (Luke Palmer)
+ Support CURLOPT_PROXY_SSL_OPTIONS.
  (Nicolás Ojeda Bär)
+ Add support for TCP_KEEPALIVE, TCP_KEEPIDLE, TCP_KEEPINTVL options.
  (Sewen Thy)
+ Support CURLOPT_PREREQFUNCTION. Support CURLOPT_AWS_SIGV4.
  (Albert Peschar)
* Add missing dependency on Unix.
  (David Allsopp)
+ Check for CURLOPT_XFERINFOFUNCTION.
  (ygrek)
+ Check for curl_global_sslset.
  (Nicolás Ojeda Bär)

## 0.9.2 - 7 Jan 2022

+ CURLINFO_HTTP_VERSION (Rudi Grinberg)
+ CURLOPT_XFERINFOFUNCTION
+ alternative READFUNCTION2/WRITEFUNCTION2 with an ability to pause transfer
* fix READFUNCTION deadlock on exception
+ CURLMOPT_MAX_TOTAL_CONNECTIONS (Nicolás Ojeda Bär)
* configure: allow setting CURLCFLAGS, CURLLIBS, LIBCURL_VERSION (Nicolás Ojeda Bär)
+ CURLOPT_TCP_FASTOPEN (Daniel Woelfel)
+ Add support for MultiSSL mode (Nicolás Ojeda Bär)
+ CURLOPT_DOH_URL (Daniel Woelfel)
+ Curl.Multi.poll (Romain Beauxis)
+ CURLOPT_BUFFERSIZE (Daniel Woelfel)
+ CURLINFO_ACTIVESOCKET (Romain Beauxis)
* Multi: more useful errors
+ Make it possible to add a name to a MIME part (Bertrand Bonnefoy-Claudet)

## 0.9.1 - 13 Feb 2020

+ HTTP_VERSION_3
* fix build with OCaml 4.10

## 0.9.0 - 13 Nov 2019

* remove duphandle
* fix Curl.pause segfault with libcurl >= 7.60.0

## 0.8.2 - 5 Aug 2018

* deprecate duphandle
+ curlCode_of_int
+ CURLOPT_MIMEPOST
+ CURLOPT_SSH_KNOWNHOSTS CURLOPT_SSH_KEYFUNCTION
+ HTTP_VERSION_2_PRIOR_KNOWLEDGE

## 0.8.1 - 11 Mar 2018

+ CURLOPT_POSTREDIR
* fix Multi.wait on windows (Nicolás Ojeda Bär)
* require libcurl >= 7.28.0

## 0.8.0 - 28 Nov 2017

* fix build on Windows/msvc (Nicolás Ojeda Bär)
* fix debugfunction invocation
* require libcurl >= 7.17.0
* less mallocs per handle
+ CURLOPT_USERNAME CURLOPT_PASSWORD CURLOPT_LOGIN_OPTIONS CURLOPT_CONNECT_TO
+ build cmxs
* fix build tests with OCaml 4.06.0

## 0.7.10 - 12 Jun 2017

+ CURL_SSLVERSION_TLSv1_3
* O(1) vs O(N) speedup for workloads with lots of short-lived concurrent connections

## 0.7.9 - 3 Oct 2016
