@@ -512,6 +512,7 @@ type curlOption =
   | CURLOPT_TCP_KEEPALIVE of bool
   | CURLOPT_TCP_KEEPIDLE of int
   | CURLOPT_TCP_KEEPINTVL of int
+  | CURLOPT_NOPROXY of string
 
 type initOption =
   | CURLINIT_GLOBALALL
@@ -856,6 +857,7 @@ val set_mimepost : t -> curlMIMEPart list -> unit
 
 val set_sshknownhosts : t -> string -> unit
 val set_sshkeyfunction : t -> (curlKHMatch -> string -> curlKHStat) -> unit
+val set_noproxy : t -> string -> unit
 
 (** {2 Get transfer properties} *)
 
@@ -1066,6 +1068,7 @@ class handle :
     method set_tcpkeepalive : bool -> unit
     method set_tcpkeepidle : int -> unit
     method set_tcpkeepintvl : int -> unit
+    method set_noproxy : string -> unit
 
     method get_effectiveurl : string
     method get_redirecturl : string
