@@ -18,6 +18,8 @@
   (ygrek)
 + Check for curl_global_sslset.
   (Nicolás Ojeda Bär)
++ Support CURL_NOPROXY.
+  (Luke Palmer)
 
 ## 0.9.2 - 7 Jan 2022
 
